alterando caminho firebase

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist\\memorizar-verbos-irregulares",
+    "public": "dist/memorizar-verbos-irregulares",
     "ignore": [
       "firebase.json",
       "**/.*",
